// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlightSearchComponent should match snapshot without flights 1`] = `
<flight-flight-search
  __ngContext__="0"
  destroy$$={[Function Subject]}
  flightService={[Function Object]}
  flights$={[Function AnonymousSubject]}
  searchFlightsFormGroup={[Function FormGroup]}
>
  <div
    class="card"
  >
    <div
      class="header"
    >
      <h2
        class="title"
      >
        Search Flights
      </h2>
    </div>
    <div
      class="content"
      data-tid="content"
    >
      <form
        class="ng-untouched ng-pristine ng-valid"
        novalidate=""
      >
        <div
          class="form-group"
        >
          <label>
            From:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            data-tid="from"
            formcontrolname="from"
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            To:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            data-tid="to"
            formcontrolname="to"
          />
        </div>
      </form>
    </div>
  </div>
</flight-flight-search>
`;

exports[`FlightSearchComponent should render a list of flights and show the amount found 1`] = `
<div
  class="content"
  data-tid="content"
>
  <form
    class="ng-untouched ng-valid ng-dirty"
    novalidate=""
  >
    <div
      class="form-group"
    >
      <label>
        From:
      </label>
      <input
        class="form-control ng-untouched ng-valid ng-dirty"
        data-tid="from"
        formcontrolname="from"
      />
    </div>
    <div
      class="form-group"
    >
      <label>
        To:
      </label>
      <input
        class="form-control ng-untouched ng-pristine ng-valid"
        data-tid="to"
        formcontrolname="to"
      />
    </div>
    <div>
       2 flights found! 
      <div
        class="flight-cards"
      >
        <flight-card />
        <flight-card />
        
      </div>
    </div>
    
  </form>
</div>
`;

exports[`FlightSearchComponent should search a flight from Graz to Hamburg 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "from": "Graz",
        "to": "Hamburg",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Observable {
        "_subscribe": [Function],
      },
    },
  ],
}
`;

exports[`FlightSearchComponent should search a flight from Graz to undefined 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "from": "Graz",
        "to": "",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Observable {
        "_subscribe": [Function],
      },
    },
  ],
}
`;

exports[`FlightSearchComponent should search a flight from undefined to Hamburg 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "from": "",
        "to": "Hamburg",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Observable {
        "_subscribe": [Function],
      },
    },
  ],
}
`;
